# user-auth-service

./: .env.local.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  justfile  main.py  nginx.conf  pyproject.toml
migrations/: env.py
migrations/versions/: 2024_05_28_16_11_52_0139b4ef8c97_init_user_tables.py  2024_06_03_15_36_31_d4545c5611e0_add_unique_constrate_to_role_table.py  2024_06_07_10_58_19_b9953ce9ac50_add_index_to_foreign_keys.py
src/application/: app_initialization.py  exception_handler.py  routers_init.py
src/application/api/routers/: healthcheck.py
src/application/api/routers/auth/: admin.py  common.py  web.py
src/application/api/routers/users_manage/: admin.py  common.py
src/application/api/schemas/request_schemas/: common.py
src/application/api/schemas/request_schemas/user/: company_information.py  user.py
src/application/api/schemas/response_schemas/: base_responses.py  orjson.py
src/application/api/schemas/response_schemas/user/: user.py
src/application/api/schemas/response_schemas/users/: company_information.py  role.py  user.py
src/application/di/: di_builder.py  stubs.py
src/application/di/providers/: auth_manager.py  current_user.py  db_session.py
src/application/middlewares/: main.py
src/config/: api.py  auth.py  database.py  log.py  mailing.py  redis.py  server.py  settings.py
src/core/auth_core/: constants.py  exceptions.py  jwt.py  schemas.py
src/core/celery/: celery_configuration.py
src/core/celery/tasks/: mailing.py
src/core/common/: constants.py  exceptions.py
src/core/common/constants/: users.py
src/core/database/: exceptions.py  executor.py  provider.py  schemas.py  session_context.py  session_management.py
src/core/database/models/: __init__.py  company_information.py  role.py  user.py
src/core/database/models/mixins/: id_mixins.py
src/core/log/app_log/: logger_configurator.py
src/core/log/uvicorn_log/: uvicorn_log_config_builder.py
src/core/mailing/: mail_app.py  messages.py
src/core/redis/: constants.py  provider.py  redis_cache.py  redis_context.py  redis_session.py
src/modules/users/: exceptions.py
src/modules/users/common/: constants.py
src/modules/users/dtos/: companies_dtos.py  reole_dtos.py  user_dtos.py
src/modules/users/repositories/: company_repository.py  role_repository.py  user_repository.py
src/modules/users/use_cases/: get_user_by_id.py  get_users_by_filters.py
src/modules/users/utils/: password.py
src/modules/users/validators/: company_information_validators.py  role_validators.py  user_validators.py
tests/integration/migrations/: test_migrations.py
(+6 files in other folders)
